<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="br.com.chicobentojr.androidpushmessage.activitys.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/fontLight"
            android:hint="@string/txtTitleHint"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtContent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_text_size"
            android:fontFamily="@string/fontLight"
            android:gravity="start|top"
            android:hint="@string/txtContentHint"
            android:inputType="textCapSentences" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
